[gd_scene format=3 uid="uid://dxhn5n16onctb"]

[ext_resource type="Script" uid="uid://bh281khl56nys" path="res://entities/ui/new_player/scripts/NewPlayer.gd" id="1_oy8p1"]
[ext_resource type="Script" uid="uid://brbcc8bllpjah" path="res://shared/entities/line_edit_validation/scripts/LineEditValidation.gd" id="2_oqjxw"]
[ext_resource type="Script" uid="uid://c2xkfxidnc8ec" path="res://entities/ui/new_player/scripts/ErrorBox.gd" id="3_37146"]
[ext_resource type="Script" uid="uid://ce2gjvxth663u" path="res://entities/ui/new_player/scripts/NewPlayerOk.gd" id="4_dgat8"]
[ext_resource type="Script" uid="uid://tjo0r1gwyjls" path="res://shared/resources/validations/MultiAndValidation.gd" id="5_01nw8"]
[ext_resource type="Shortcut" uid="uid://2i2jk61uyyn2" path="res://assets/shortcuts/Abort.tres" id="6_057kb"]
[ext_resource type="Script" uid="uid://chfatpxf8ucxr" path="res://shared/entities/clickable_button/ClickableButton.gd" id="6_321yi"]
[ext_resource type="Script" uid="uid://cci4ryxp2ob7m" path="res://shared/resources/validations/Validation.gd" id="6_tbwh4"]
[ext_resource type="Resource" uid="uid://bfylp3ooxs1ua" path="res://shared/resources/translations/assets/MaxSizeTranslation.tres" id="7_vknnk"]
[ext_resource type="Resource" uid="uid://h0lfh3suh0v5" path="res://shared/resources/translations/assets/MinSizeTranslation.tres" id="8_lua0x"]
[ext_resource type="Resource" uid="uid://dkqwatqifmgr" path="res://shared/resources/translations/assets/RegexOnlyLettersAndNumbers.tres" id="8_oqjxw"]
[ext_resource type="Script" uid="uid://dgu6d3fl16qev" path="res://shared/resources/validations/TextSizeValidation.gd" id="9_oocp0"]
[ext_resource type="Script" uid="uid://gvswey3hf5eo" path="res://shared/resources/validations/RegexValidation.gd" id="10_i07x6"]

[sub_resource type="Resource" id="Resource_p382m"]
script = ExtResource("9_oocp0")
min_size = 2
max_size = 20
metadata/_custom_type_script = "uid://dgu6d3fl16qev"

[sub_resource type="Resource" id="Resource_e0m5k"]
script = ExtResource("10_i07x6")
regex_rules = "^[a-zA-Z0-9]+$"
regex_validation_error = ExtResource("8_oqjxw")
metadata/_custom_type_script = "uid://gvswey3hf5eo"

[sub_resource type="Resource" id="Resource_8pene"]
script = ExtResource("5_01nw8")
validators = Array[ExtResource("6_tbwh4")]([SubResource("Resource_p382m"), SubResource("Resource_e0m5k")])
metadata/_custom_type_script = "uid://tjo0r1gwyjls"

[node name="MarginContainer" type="MarginContainer" unique_id=4669425]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 106.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_oy8p1")

[node name="VBoxContainer2" type="VBoxContainer" parent="." unique_id=1891747135]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2" unique_id=1589903580]
layout_mode = 2

[node name="PlayerName" type="LineEdit" parent="VBoxContainer2/VBoxContainer" unique_id=1603426489]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PLAYER_NAME"
script = ExtResource("2_oqjxw")
is_focused = true
validation = SubResource("Resource_8pene")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer" unique_id=1169579905]
layout_mode = 2

[node name="AddPlayer" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer3" unique_id=39252755 node_paths=PackedStringArray("player_name_field", "fields_for_validation")]
layout_mode = 2
text = "OK"
script = ExtResource("4_dgat8")
player_name_field = NodePath("../../PlayerName")
fields_for_validation = [NodePath("../../PlayerName")]

[node name="AbortButton" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer3" unique_id=1987078717]
layout_mode = 2
size_flags_horizontal = 10
shortcut = ExtResource("6_057kb")
shortcut_in_tooltip = false
text = "CANCEL"
script = ExtResource("6_321yi")

[node name="PlayerNameError" type="RichTextLabel" parent="VBoxContainer2" unique_id=2017417022]
layout_mode = 2
bbcode_enabled = true
text = "ERROR"
fit_content = true
script = ExtResource("3_37146")

[connection signal="text_changed" from="VBoxContainer2/VBoxContainer/PlayerName" to="VBoxContainer2/VBoxContainer/PlayerName" method="_on_text_changed"]
[connection signal="text_submitted" from="VBoxContainer2/VBoxContainer/PlayerName" to="VBoxContainer2/VBoxContainer/HBoxContainer3/AddPlayer" method="text_submitted"]
[connection signal="valid" from="VBoxContainer2/VBoxContainer/PlayerName" to="VBoxContainer2/VBoxContainer/HBoxContainer3/AddPlayer" method="validate"]
[connection signal="valid" from="VBoxContainer2/VBoxContainer/PlayerName" to="VBoxContainer2/PlayerNameError" method="reset"]
[connection signal="validation_error" from="VBoxContainer2/VBoxContainer/PlayerName" to="VBoxContainer2/PlayerNameError" method="set_error"]
[connection signal="validation_failed" from="VBoxContainer2/VBoxContainer/PlayerName" to="VBoxContainer2/VBoxContainer/HBoxContainer3/AddPlayer" method="invalid_data"]
[connection signal="player_was_added" from="VBoxContainer2/VBoxContainer/HBoxContainer3/AddPlayer" to="." method="player_was_added"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer3/AbortButton" to="." method="modal_getting_closed"]
